<resources>
    <string name="app_name">huzhu1230</string>
    <string name="tab_home">首页</string>
    <string name="tab_lookup">寻人专区</string>
    <string name="tab_release">发布</string>
    <string name="tab_knowledge">救援知识</string>
    <string name="tab_mine">我的</string>
    <string name="publish_aed">发布AED</string>
    <string name="publish_emergency_search">发布紧急寻人</string>
    <string name="publish_common_search">发布常年寻人</string>
    <string name="search_help_knowledge">搜索救援知识</string>
    <string name="common_help">常用救援</string>
    <string name="daily_help">日常救援</string>
    <string name="nearby_aed">附近AED</string>
    <string name="system_message">系统消息</string>
    <string name="message">消息</string>
    <string name="platform_message">平台消息</string>
    <string name="video_content">视频内容</string>
    <string name="article_content">文章内容</string>
    <string name="no_content">暂无该内容</string>
    <string name="collect">收藏</string>
</resources>
