<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_tab_home"
        android:title="@string/tab_home"
        app:actionViewClass="android.widget.TextView" />

    <item
        android:id="@+id/nav_lookup"
        android:icon="@drawable/icon_tab_lookup"
        android:title="@string/tab_lookup" />

    <item
        android:checkable="false"
        android:id="@+id/nav_release"
        android:icon="@drawable/icon_tab_release"
        android:title="@string/tab_release" />

    <item
        android:id="@+id/nav_knowledge"
        android:icon="@drawable/icon_tab_knowledge"
        android:title="@string/tab_knowledge" />

    <item
        android:id="@+id/nav_mine"
        android:icon="@drawable/icon_tab_mine"
        android:title="@string/tab_mine" />

</menu>