<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dialog_close"
        android:padding="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/btn_release_emergency"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/publish_emergency_search"
        android:textColor="@color/white"
        android:background="@drawable/bg_yellow_btn"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn_release_common"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/publish_common_search"
        android:textColor="@color/white"
        android:background="@drawable/bg_yellow_btn"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_release_emergency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn_release_aed"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/publish_aed"
        android:textColor="@color/white"
        android:background="@drawable/bg_blue_btn"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_release_common"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</android.support.constraint.ConstraintLayout>