<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_app"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="12dp"
        android:paddingRight="10dp"
        android:paddingBottom="12dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_return" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clSearch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_white_15r"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etSearchContent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/search_help_knowledge"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/color_gray_333333"
                android:textColorHint="@color/color_gray_999999"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/ivSearch"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSearchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_white_7r"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbVideo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:text="@string/video_content"
                android:textColor="@color/rg_text_selector"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbArticle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:text="@string/article_content"
                android:textColor="@color/rg_text_selector"
                android:textSize="14sp" />

        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_white_card"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_logo_gray" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_content"
            android:textColor="#656565"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>